prevent overflow

--- a/tardigrada/src/app/school/school.component.css
+++ b/tardigrada/src/app/school/school.component.css
@@ -8,6 +8,7 @@
   font-family: Ubuntu;
   font-weight: 300;
   line-height: 1.3;
+  white-space: normal;
 }
 
 .zhizn {
@@ -54,7 +55,7 @@
   padding-right: 70px;
 }
 
-#group {
+.group {
   width: 500px;
 }
 
@@ -140,7 +141,7 @@
     margin-top: 50px;
   }
 
-  #group {
+  .group {
     width: 90%;
   }
 
@@ -150,5 +151,9 @@
 
   .to-right-text {
     font-size: 20px;
+  }
+
+  .inner {
+    padding: 10px;
   }
 }
